--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <script src="https://kit.fontawesome.com/55d915acaf.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <div class="card mt-5">
+                    <div class="card-header">
+                        <h2 class="card-title">Stimme jetzt ab!</h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="media">
+                            <img src="https://via.placeholder.com/64" class="mr-3">
+                            <div class="media-body">
+                                <h5>
+                                    Spaghetti Bolognese 
+                                    <span class="float-right text-primary">
+                                        <i class="fa fa-chevron-up">23</i>
+                                    </span>
+                                </h5>
+                                <div>
+                                    Ein Nudelgericht mit Hackfleischsoße.
+                                </div>
+                                <small class="text-muted">Eingereicht von: Italien</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://unpkg.com/vue"></script>
+    <script>
+        new Vue();
+    </script>
 </body>
 </html>
