--- a/index.html
+++ b/index.html
@@ -4,31 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Bootstrap integrieren -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> 
+    <!-- Font Awesome integrieren -->
     <script src="https://kit.fontawesome.com/55d915acaf.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-8 offset-2">
-                <div class="card mt-5">
-                    <div class="card-header">
-                        <h2 class="card-title">Stimme jetzt ab!</h2>
-                    </div>
-                    <div class="card-body">
-                        <div class="media">
-                            <img src="https://via.placeholder.com/64" class="mr-3">
-                            <div class="media-body">
-                                <h5>
-                                    Spaghetti Bolognese 
-                                    <span class="float-right text-primary">
-                                        <i class="fa fa-chevron-up">23</i>
-                                    </span>
-                                </h5>
-                                <div>
-                                    Ein Nudelgericht mit Hackfleischsoße.
+    <div id="app">
+        <div class="container">
+            <div class="row">
+                <div class="col-8 offset-2">
+                    <div class="card mt-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Stimme jetzt ab!</h2>
+                            <entry-component></entry-component>
+                        </div>
+                        <div class="card-body">
+                            <div class="media my-3"
+                                 v-for="entry in sortedEntries"> <!-- v-for directive wird benutzt um durchzuiterieren -->
+                                <img v-bind:src="entry.image" class="mr-3"> <!-- v-bind directive  bindet Attribute und einen Wert zuordnen -->
+                                <div class="media-body">
+                                    <h5>
+                                        {{ entry.title }}
+                                        <span 
+                                            class="float-right text-primary"
+                                            style="cursor: pointer"
+                                            v-on:click="upvote(entry.id)">
+                                            <i class="fa fa-chevron-up">{{ entry.votes }}</i>
+                                        </span>
+                                    </h5>
+                                    <div>
+                                        {{ entry.desc }}
+                                    </div>
+                                    <small class="text-muted">Eingereicht von: {{ entry.author }}</small>
                                 </div>
-                                <small class="text-muted">Eingereicht von: Italien</small>
                             </div>
                         </div>
                     </div>
@@ -37,9 +46,78 @@
         </div>
     </div>
 
+    <script>
+        // Einträge 
+        const entries = [
+            {
+                id: 1,
+                title:"Spaghetti Bolognese",
+                desc:"Ein Nudelgericht mit Hackfleischsoße.",
+                votes: 16,
+                author: "Italien",
+                image: "https://via.placeholder.com/64"
+
+            },
+            {
+                id: 2,
+                title:"Wiener Schnitzel",
+                desc:"Ein dünnes Schnitzel aus Kalbfleisch.",
+                votes: 5,
+                author: "Österreich",
+                image: "https://via.placeholder.com/64"
+
+            },
+            {
+                id: 3,
+                title:"Peking Ente",
+                desc:"Das kaiserliche Gericht.",
+                votes: 20,
+                author: "China",
+                image: "https://via.placeholder.com/64"
+
+            },
+            {
+                id: 4,
+                title:"Gulasch",
+                desc:"Ein traditionelles Ragout.",
+                votes: 24,
+                author: "Ungarn",
+                image: "https://via.placeholder.com/64"
+
+            }
+        ]
+
+    </script>
+    
+
     <script src="https://unpkg.com/vue"></script>
     <script>
-        new Vue();
+        Vue.component("entry-component", {
+            //Optionen
+            template: "<p>Hallo, ich bin eine Komponente."
+
+        })
+
+
+        new Vue({
+            el: '#app', // Alles innerhalb #app kann von VUE angesprochen und verändert werden
+            data: {
+                entries: entries
+            },
+            computed: { // computed properties werden genutzt, wenn kompliziertere Berechnungen mit den Daten passieren müssen
+                sortedEntries () {
+                   return this.entries.sort((a,b) => {
+                        return b.votes - a.votes
+                    })
+                }
+            },
+            methods: {
+                upvote(entryId) {
+                    const entry = this.entries.find( entry => entry.id === entryId)
+                    entry.votes++
+                }
+            }
+        })
     </script>
 </body>
 </html>
